# lazyprox

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build-on-release.yml
docs/: LICENSE  TODO.md
src/lazyprox/: __init__.py
src/lazyprox/app/: __init__.py  app.py  resource_actions.py  styles.tcss
src/lazyprox/common/: __init__.py  config.py  utils.py
src/lazyprox/data/: __init__.py  proxmox.py
src/lazyprox/screens/: __init__.py  dashboard.py  filter.py  select_action.py  select_server.py  waiting.py
src/lazyprox/widgets/: __init__.py  base_datatable_widget.py  details_widget.py  lxc_widget.py  node_widget.py  qemu_widget.py
src/lazyprox/widgets/details_views/: __init__.py  graph_base.py  graph_widget.py  lxc_graph.py  lxc_summary.py  node_graph.py  node_summary.py  node_tasks.py  qemu_graph.py  qemu_summary.py  summary_base.py
